<resources>
    <string name="app_name">E-com Demo App</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="menu_home">Home</string>
    <string name="menu_gallery">Gallery</string>
    <string name="menu_slideshow">Slideshow</string>

    <string name="home_second">Home Second</string>
    <string name="best_selling_items">Best Selling Items</string>
    <string name="see_all">Sell all</string>
    <string name="login">Log In</string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="forgotpass">Forgot Your Password ?</string>
    <string name="create_an_account">Create an Account !</string>
    <string name="signin">Sign In</string>
    <string name="add_to_cart">Add to Cart</string>
    <string name="cannot_be_empty">Can not be empty !</string>
    <string name="enter_valid_email_address">Enter valid email id !</string>
    <string name="password_will_must_be_greater_than_six">Password must be greater than six !</string>
</resources>
