<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context=".ui.activities.logInPage.Login">


        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_gravity="center"
            android:gravity="center"
            android:background="@android:color/white">


            <androidx.core.widget.NestedScrollView
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                 android:layout_marginTop="5dp">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical"
                    android:padding="15dp">

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:gravity="center"
                        android:paddingTop="5dp"
                        android:paddingBottom="5dp"
                        android:text="@string/login"
                        android:textAppearance="@style/TextAppearance.AppCompat.Large"
                        android:textColor="@android:color/black"
                        android:textStyle="bold" />

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="10dp"
                        android:layout_marginBottom="5dp"
                        android:text="Email"
                        android:textAppearance="@style/TextAppearance.AppCompat.Medium"
                        android:textSize="14sp"
                        android:textStyle="bold" />

                    <com.google.android.material.textfield.TextInputLayout
                        android:id="@+id/firstNameTextInputLayout"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:hint="@string/email">

                        <com.google.android.material.textfield.TextInputEditText
                            android:id="@+id/emailTextInputEditText"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:gravity="start|center"
                            android:inputType="text"
                            android:maxLines="1"
                            android:textSize="12sp"
                             />

                    </com.google.android.material.textfield.TextInputLayout>

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="20dp"
                        android:layout_marginBottom="5dp"
                        android:text="Password"
                        android:textAppearance="@style/TextAppearance.AppCompat.Medium"
                        android:textSize="14sp"
                        android:textStyle="bold" />

                    <com.google.android.material.textfield.TextInputLayout
                        android:id="@+id/passwordTextInputLayout"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:hint="@string/password">

                        <com.google.android.material.textfield.TextInputEditText
                            android:id="@+id/passwordTextInputEditText"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:gravity="start|center"
                            android:inputType="textPassword"
                            android:maxLength="12"
                            android:textSize="12sp"
                              />

                    </com.google.android.material.textfield.TextInputLayout>



                    <Button
                        android:id="@+id/loginButton"
                        android:layout_width="match_parent"
                        android:layout_height="40dp"
                        android:background="@color/colorAccent"
                        android:textColor="@android:color/white"
                        android:layout_marginTop="10dp"
                        android:text="@string/signin"
                        android:textStyle="normal"
                        android:textSize="14sp" />

                    <TextView
                        android:id="@+id/forgotPassTextView"
                        android:layout_height="wrap_content"
                        android:layout_width="wrap_content"
                        android:layout_gravity="start"
                        android:layout_marginTop="10dp"
                        android:background="?attr/selectableItemBackground"
                        android:clickable="true"
                        android:focusable="true"
                        android:padding="5dp"
                        android:text="@string/forgotpass"
                        android:textAlignment="textStart"
                        android:textSize="12sp" />

                    <TextView
                        android:id="@+id/createAccountTextView"
                         android:layout_height="wrap_content"                        android:layout_width="wrap_content"
                        android:layout_gravity="start"
                        android:layout_marginTop="5dp"
                        android:background="?attr/selectableItemBackground"
                        android:clickable="true"
                        android:focusable="true"
                        android:padding="5dp"
                        android:text="@string/create_an_account"
                        android:textAlignment="textStart"
                        android:textSize="12sp" />

                </LinearLayout>

            </androidx.core.widget.NestedScrollView>
        </RelativeLayout>

</layout>